Fixed raffle meter's text overflowing on different sized screens

--- a/assets/css/raffle-meter.css
+++ b/assets/css/raffle-meter.css
@@ -137,7 +137,7 @@
 /* For mobile */
 @media (max-width: 655px) {
     .halfStyle.hs-vertical-third {
-    font-size: 15.5vw;
+    font-size: 15vw;
     text-shadow:
         -1px -1px 0 #000,
          1px -1px 0 #000,
@@ -168,7 +168,7 @@
     }
     #progress-title {
     font-size: 20px;
-    margin-bottom: -1%;
+    margin-bottom: 1%;
     }
     #mouse-over {
     display: none;
