--- a/assets/css/small-raffle-meter.css
+++ b/assets/css/small-raffle-meter.css
@@ -1,42 +1,44 @@
 #raffle-meter-container-s {
-    display: none;
-    position:relative;
-    text-align:center;
-    overflow: hidden;
+  display: none;
+  position:relative;
+  text-align:center;
+  overflow: hidden;
 }
 #raffle-meter-out {
-    background-color: #FFD000;
-    height:2.5em;
+  background-color: #FFD000;
+  height:2.5em;
 }
 #raffle-meter-sold {
-    position:absolute;
-    top:0px;
-    left:0px;
-    background-color: #1A245B;
-    height:2.5em;
+  position:absolute;
+  top:0px;
+  left:0px;
+  background-color: #1A245B;
+  height:2.5em;
 }
 #percent {
-    background-color: rgba(255,255,255,.5);
-    position:absolute;
-    top:.5em;
-    height: 1.5em;
-    padding: 0px;
+  background-color: rgba(255,255,255,.5);
+  position:absolute;
+  top:.5em;
+  height: 1.5em;
+  padding: 0px;
+  line-height: 1.5em;
 
-    left:0;
-    right:0;
-    margin-left:auto;
-    margin-right:auto;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
 }
 a.raffle-link {
-    font-weight: bold;
-    color: #FFF;
-    text-shadow: black 0.1em 0.1em 0.2em;
+  font-weight: bold;
+  color: #FFF;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
 /* For mobile */
-@media (max-width: 700px) and (orientation: portrait){
-    #percent {
-        font-size:13px;
-        right: 0px;
-        height: 22px;
-    }
+@media (max-width: 475px){
+  #percent {
+    font-size: 12px;
+    right: 0px;
+    height: 2em;
+    line-height: 2em;
+  }
 }
